--- a/src/task_inspector_window.ui
+++ b/src/task_inspector_window.ui
@@ -14,7 +14,14 @@
    <string>TaskInspector</string>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <layout class="QHBoxLayout" name="horizontalLayout">
+   <layout class="QVBoxLayout" name="verticalLayout">
+    <item>
+     <widget class="QLineEdit" name="lineEdit">
+      <property name="placeholderText">
+       <string>Enter a task name to filter</string>
+      </property>
+     </widget>
+    </item>
     <item>
      <widget class="QTreeView" name="treeView">
       <property name="sizePolicy">
@@ -59,6 +66,15 @@
            </color>
           </brush>
          </colorrole>
+         <colorrole role="PlaceholderText">
+          <brush brushstyle="NoBrush">
+           <color alpha="128">
+            <red>0</red>
+            <green>0</green>
+            <blue>0</blue>
+           </color>
+          </brush>
+         </colorrole>
         </active>
         <inactive>
          <colorrole role="Text">
@@ -88,6 +104,15 @@
            </color>
           </brush>
          </colorrole>
+         <colorrole role="PlaceholderText">
+          <brush brushstyle="NoBrush">
+           <color alpha="128">
+            <red>0</red>
+            <green>0</green>
+            <blue>0</blue>
+           </color>
+          </brush>
+         </colorrole>
         </inactive>
         <disabled>
          <colorrole role="Text">
@@ -114,6 +139,15 @@
             <red>255</red>
             <green>255</green>
             <blue>174</blue>
+           </color>
+          </brush>
+         </colorrole>
+         <colorrole role="PlaceholderText">
+          <brush brushstyle="NoBrush">
+           <color alpha="128">
+            <red>0</red>
+            <green>0</green>
+            <blue>0</blue>
            </color>
           </brush>
          </colorrole>
@@ -162,11 +196,11 @@
       <attribute name="headerCascadingSectionResizes">
        <bool>false</bool>
       </attribute>
-      <attribute name="headerDefaultSectionSize">
-       <number>200</number>
-      </attribute>
       <attribute name="headerMinimumSectionSize">
        <number>0</number>
+      </attribute>
+      <attribute name="headerDefaultSectionSize">
+       <number>200</number>
       </attribute>
       <attribute name="headerShowSortIndicator" stdset="0">
        <bool>false</bool>
@@ -181,7 +215,7 @@
      <x>0</x>
      <y>0</y>
      <width>584</width>
-     <height>25</height>
+     <height>40</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuNameServices">
